--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,11 +8,11 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "moduleDetection": "force",
-    "noEmit": true,
+//    "moduleResolution": "bundler",
+//    "allowImportingTsExtensions": true,
+//    "verbatimModuleSyntax": true,
+//    "moduleDetection": "force",
+//    "noEmit": true,
 
     /* Linting */
     "strict": false,
